# sicd-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README-crates.md  README.md
examples/: read.rs
src/: lib.rs
src/dep/v0_4_0/: geo_data.rs  grid.rs  image_data.rs  image_formation.rs  match_info.rs  mod.rs  pfa.rs  position.rs  radar_collection.rs  scpcoa.rs  timeline.rs
src/dep/v0_5_0/: grid.rs  image_formation.rs  match_info.rs  mod.rs
src/v1_3_0/: antenna.rs  error_statistics.rs  geo_data.rs  grid.rs  image_formation.rs  match_info.rs  mod.rs  pfa.rs  position.rs  radar_collection.rs  radiometric.rs  scpcoa.rs  timeline.rs
tests/: gen_xml_040.rs  gen_xml_050.rs  gen_xml_130.rs  parse_gen_xml.rs  parse_gen_xml_130_file.rs  sicd_meta_040.xml  sicd_meta_040_00.xml  sicd_meta_040_01.xml  sicd_meta_050.xml  sicd_meta_050_00.xml  sicd_meta_050_01.xml  sicd_meta_130_00.xml  sicd_meta_130_01.xml  sicd_meta_130_02.xml  sicd_meta_130_03.xml
tests/schema/modified/: SICD_schema_V0.4.0_2010_02_12.xsd  SICD_schema_V0.5.0_2011_01_12.xsd  SICD_schema_V1.3.0_2021_11_30.xsd
