[package]
name = "sicd-rs"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate to interact with SICD files."
homepage = "https://github.com/holmesv3/sicd-rs"
readme = "README-crates.md"

[dependencies]
thiserror = "1.0"
num-complex = "0.4.3"
nitf-rs = { version = "0.3.0" }
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.28", features = ["serialize"] }
num-traits = "0.2.17"
