[package]
name = "sicd-rs"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate to interact with SICD files."
homepage = "https://github.com/holmesv3/sicd-rs"
readme = "README-crates.md"

[dependencies]
thiserror = "1.0"
num-complex = "0.4.3"
nitf-rs = { version = "0.3.1"}
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.28", features = ["serialize"] }
zerocopy = "0.7.32"
memmap2 = "0.5.10"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
